--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"
+    />
     <title>Meditation App</title>
   </head>
   <body>
@@ -25,7 +33,7 @@
         </audio>
         <img src="./svg/play.svg" alt="play" class="play" />
         <svg
-          class="track-outline"
+          class="countdown"
           width="453"
           height="453"
           viewBox="0 0 453 453"
@@ -68,7 +76,8 @@
         </button>
       </div>
     </div>
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
 
-    <script src="./app.js"></script>
+    <script src="App.js"></script>
   </body>
 </html>
